@@ -5,190 +5,174 @@ import java.util.LinkedList;
 import java.util.List;
 
 public class BetterGame implements IGame {
-	
-	public static class Player{
-		private final String name;
-		private int place = 0;
-		private int purse = 0;
-		
-		public final int getPurse() {
-			return purse;
-		}
+	ArrayList players = new ArrayList();
+	int[] places = new int[6];
+	int[] purses = new int[6];
+	boolean[] inPenaltyBox = new boolean[6];
 
-		public Player(String name) {
-			this.name = name;
-		}
-		
-		public int getPlace() {
-			return place;
-		}
-		
-		public String getName() {
-			return name;
-		}
-		
-		public void moveForward(int roll) {
-			place += roll;
+	LinkedList popQuestions = new LinkedList();
+	LinkedList scienceQuestions = new LinkedList();
+	LinkedList sportsQuestions = new LinkedList();
+	LinkedList rockQuestions = new LinkedList();
 
-			if (place > 11) {
-				place -= 12;				
-			}
-		}
-		
-		public void addCoinToPurse(){
-			purse++;
-		}
-		
-		public boolean isWinner() {
-			return purse == 6;
+	int currentPlayer = 0;
+	boolean isGettingOutOfPenaltyBox;
+
+	public BetterGame() {
+		for (int i = 0; i < 50; i++) {
+			popQuestions.addLast("Pop Question " + i);
+			scienceQuestions.addLast(("Science Question " + i));
+			sportsQuestions.addLast(("Sports Question " + i));
+			rockQuestions.addLast(createRockQuestion(i));
 		}
 	}
-	
-    List<Player> players = new ArrayList<Player>();
-    boolean[] inPenaltyBox  = new boolean[6];
-    
-    List<String> popQuestions = new LinkedList<String>();
-    List<String> scienceQuestions = new LinkedList<String>();
-    List<String> sportsQuestions = new LinkedList<String>();
-    List<String> rockQuestions = new LinkedList<String>();
-    
-    int currentPlayer = 0;
-    boolean isGettingOutOfPenaltyBox;
-    
-    public  BetterGame(){
-    	for (int i = 0; i < 50; i++) {
-			popQuestions.add("Pop Question " + i);
-			scienceQuestions.add(("Science Question " + i));
-			sportsQuestions.add(("Sports Question " + i));
-			rockQuestions.add(createRockQuestion(i));
-    	}
-    }
 
-	public String createRockQuestion(int index){
+	@Override
+	public String createRockQuestion(int index) {
 		return "Rock Question " + index;
 	}
-	
+
+	@Override
 	public boolean isPlayable() {
 		return (howManyPlayers() >= 2);
 	}
 
+	@Override
 	public boolean add(String playerName) {
-		
-		
-	    players.add(new Player(playerName));
-	    inPenaltyBox[howManyPlayers()] = false;
-	    
-	    System.out.println(playerName + " was added");
-	    System.out.println("They are player number " + players.size());
+
+		players.add(playerName);
+		places[howManyPlayers()] = 0;
+		purses[howManyPlayers()] = 0;
+		inPenaltyBox[howManyPlayers()] = false;
+
+		System.out.println(playerName + " was added");
+		System.out.println("They are player number " + players.size());
 		return true;
 	}
-	
+
+	@Override
 	public int howManyPlayers() {
 		return players.size();
 	}
 
+	@Override
 	public void roll(int roll) {
-		System.out.println(players.get(currentPlayer).getName() + " is the current player");
+		System.out.println(players.get(currentPlayer) + " is the current player");
 		System.out.println("They have rolled a " + roll);
-		
+
 		if (inPenaltyBox[currentPlayer]) {
 			if (roll % 2 != 0) {
 				isGettingOutOfPenaltyBox = true;
-				
-				System.out.println(players.get(currentPlayer).getName() + " is getting out of the penalty box");
-				players.get(currentPlayer).moveForward(roll);
-				
-				System.out.println(players.get(currentPlayer).getName() 
-						+ "'s new location is " 
-						+ players.get(currentPlayer).getPlace());
+
+				System.out.println(players.get(currentPlayer) + " is getting out of the penalty box");
+				places[currentPlayer] = places[currentPlayer] + roll;
+				if (places[currentPlayer] > 11)
+					places[currentPlayer] = places[currentPlayer] - 12;
+
+				System.out.println(players.get(currentPlayer) + "'s new location is " + places[currentPlayer]);
 				System.out.println("The category is " + currentCategory());
 				askQuestion();
 			} else {
-				System.out.println(players.get(currentPlayer).getName() + " is not getting out of the penalty box");
+				System.out.println(players.get(currentPlayer) + " is not getting out of the penalty box");
 				isGettingOutOfPenaltyBox = false;
-				}
-			
+			}
+
 		} else {
-		
-			players.get(currentPlayer).moveForward(roll);
-			
-			System.out.println(players.get(currentPlayer).getName() 
-					+ "'s new location is " 
-					+ players.get(currentPlayer).getPlace());
+
+			places[currentPlayer] = places[currentPlayer] + roll;
+			if (places[currentPlayer] > 11)
+				places[currentPlayer] = places[currentPlayer] - 12;
+
+			System.out.println(players.get(currentPlayer) + "'s new location is " + places[currentPlayer]);
 			System.out.println("The category is " + currentCategory());
 			askQuestion();
 		}
-		
+
 	}
 
 	private void askQuestion() {
-		if (currentCategory().equals("Pop"))
-			System.out.println(popQuestions.remove(0));
+		if (currentCategory() == "Pop")
+			System.out.println(popQuestions.removeFirst());
 		if (currentCategory() == "Science")
-			System.out.println(scienceQuestions.remove(0));
+			System.out.println(scienceQuestions.removeFirst());
 		if (currentCategory() == "Sports")
-			System.out.println(sportsQuestions.remove(0));
+			System.out.println(sportsQuestions.removeFirst());
 		if (currentCategory() == "Rock")
-			System.out.println(rockQuestions.remove(0));		
+			System.out.println(rockQuestions.removeFirst());
 	}
-	
-	
-	private String currentCategory() {
-		return CATEGORIES[players.get(currentPlayer).getPlace() % 4];
-	}
-	
-	private final static String[] CATEGORIES = {"Pop", "Science", "Sports", "Rock"};
 
+	private String currentCategory() {
+		if (places[currentPlayer] == 0)
+			return "Pop";
+		if (places[currentPlayer] == 4)
+			return "Pop";
+		if (places[currentPlayer] == 8)
+			return "Pop";
+		if (places[currentPlayer] == 1)
+			return "Science";
+		if (places[currentPlayer] == 5)
+			return "Science";
+		if (places[currentPlayer] == 9)
+			return "Science";
+		if (places[currentPlayer] == 2)
+			return "Sports";
+		if (places[currentPlayer] == 6)
+			return "Sports";
+		if (places[currentPlayer] == 10)
+			return "Sports";
+		return "Rock";
+	}
+
+	@Override
 	public boolean wasCorrectlyAnswered() {
-		Player player = players.get(currentPlayer);
-		if (inPenaltyBox[currentPlayer]){
+		if (inPenaltyBox[currentPlayer]) {
 			if (isGettingOutOfPenaltyBox) {
 				System.out.println("Answer was correct!!!!");
-				player.addCoinToPurse();
-				System.out.println(getNameAndCoinStatus(player));
-				
+				purses[currentPlayer]++;
+				System.out.println(players.get(currentPlayer) + " now has " + purses[currentPlayer] + " Gold Coins.");
+
+				boolean winner = didPlayerWin();
 				currentPlayer++;
-				if (currentPlayer == players.size()) currentPlayer = 0;
-				
-				return player.isWinner();
+				if (currentPlayer == players.size())
+					currentPlayer = 0;
+
+				return winner;
 			} else {
 				currentPlayer++;
-				if (currentPlayer == players.size()) currentPlayer = 0;
-				return false;
+				if (currentPlayer == players.size())
+					currentPlayer = 0;
+				return true;
 			}
-			
-			
-			
+
 		} else {
-		
+
 			System.out.println("Answer was corrent!!!!");
-			player.addCoinToPurse();
-			System.out.println(getNameAndCoinStatus(player));
-			
+			purses[currentPlayer]++;
+			System.out.println(players.get(currentPlayer) + " now has " + purses[currentPlayer] + " Gold Coins.");
+
+			boolean winner = didPlayerWin();
 			currentPlayer++;
-			if (currentPlayer == players.size()) currentPlayer = 0;
-			
-			return player.isWinner();
+			if (currentPlayer == players.size())
+				currentPlayer = 0;
+
+			return winner;
 		}
 	}
 
-	private String getNameAndCoinStatus(Player player) {
-		return player.getName() 
-				+ " now has "
-				+ player.getPurse()
-				+ " Gold Coins.";
-	}
-	
-	public boolean wrongAnswer(){
+	@Override
+	public boolean wrongAnswer() {
 		System.out.println("Question was incorrectly answered");
-		System.out.println(players.get(currentPlayer).getName()+ " was sent to the penalty box");
+		System.out.println(players.get(currentPlayer) + " was sent to the penalty box");
 		inPenaltyBox[currentPlayer] = true;
-		
+
 		currentPlayer++;
-		if (currentPlayer == players.size()) currentPlayer = 0;
-		return !true;
+		if (currentPlayer == players.size())
+			currentPlayer = 0;
+		return true;
 	}
 
+	private boolean didPlayerWin() {
+		return !(purses[currentPlayer] == 6);
+	}
 
-	
 }
